--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 <body>
   <div id="app">
     <video controls id="video"></video>
-
-    <input type="text" />
+    <input type="hidden" value="http://localhost:4000/streams/output.m3u8">    
     <button type="button" id="load">Load</button>
   </div>
 
