--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div id="app">
     <video controls id="video"></video>
-    <input type="hidden" value="http://localhost:4000/streams/output.m3u8">    
+    <input type="hidden" value="http://140.113.179.9:4000/streams/output.m3u8">    
     <button type="button" id="load">Load</button>
   </div>
 
