--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 </head>
 
 <body>
+  <div>
+    <input type="hidden" value="http://140.113.179.12:4000/streams/nctu.m3u8">
+    <button type="button" id="load">Load</button>
+  </div>
   <div id="app">
     <video controls id="video"></video>
-    <input type="hidden" value="http://192.168.173.13:4000/streams/nctu.m3u8">    
-    <button type="button" id="load">Load</button>
   </div>
 
   <script>
