--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div>
-    <input type="hidden" value="http://192.168.173.13:4000/streams/nctu.m3u8">
+    <input type="text" >
     <button type="button" id="load">Load</button>
   </div>
   <div id="app">
