--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 </head>
 
 <body>
-  <div>
-    <input type="text" >
+  <div>    
     <button type="button" id="load">Load</button>
   </div>
   <div id="app">
@@ -30,7 +29,7 @@
       video.play();
     });
     button.addEventListener("click", function () {
-      hls.loadSource(document.querySelector("input").value);
+      hls.loadSource("http://192.168.173.181.xip.io/streams/nctu.m3u8");
     })
   } else if (video.canPlayType('application/vnd.apple.mpegurl')) {
     video.addEventListener('canplay', function () {
